[workspace]
resolver = "2"
members = [
    "arcade-cart",
    "skifree",
    "breakout",
    "etch",
    "pong",
    "snake",
    "cabinet",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Peter Privitera <privitera.p@gmail.com>"]
repository = "https://github.com/privitera/shareware"

[workspace.dependencies]
egui = { version = "0.34.1", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.34.1", default-features = false, features = ["all_loaders", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
