[package]
name = "arcade-cart"
description = "Cartridge-style spec for the shareware arcade: Game trait, Input, Console, CRT effects"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["runner"]
# Enables `runner` module — eframe-based standalone shells for one game or full console.
# Disable when embedding arcade-cart inside another egui app that runs its own event loop.
runner = ["dep:eframe", "dep:egui_extras"]

[dependencies]
egui.workspace = true
eframe = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
