[package]
name = "etch"
description = "Cartridge port of a sketch-pad drawing toy with two-axis input"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
arcade-cart = { path = "../arcade-cart" }
egui.workspace = true
