[package]
name = "pong"
description = "Cartridge port of Pong with 1P (vs AI) and 2P modes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
arcade-cart = { path = "../arcade-cart" }
egui.workspace = true
