[package]
name = "skifree"
description = "Cartridge port of the 1991 SkiFree game by Chris Pirih"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
arcade-cart = { path = "../arcade-cart" }
egui.workspace = true
