[package]
name = "snake"
description = "Cartridge port of Snake with 1P and competitive 2P modes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
arcade-cart = { path = "../arcade-cart" }
egui.workspace = true
